--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 remote_theme: coderua/infotorg-api-jekyll-theme
+# --- Jekyll configuration ---
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+sass:
+  style: compressed # possible values: nested expanded compact compressed
+plugins:
+  # See the documentation for Jekyll SEO Tag: https://github.com/jekyll/jekyll-seo-tag
+  - jekyll-seo-tag
