Quote theme name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: coderua/infotorg-api-jekyll-theme
+remote_theme: "coderua/infotorg-api-jekyll-theme"
 # --- Jekyll configuration ---
 defaults:
   - scope:
