--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 remote_theme: "coderua/infotorg-api-jekyll-theme@main"
+# --- Jekyll configuration ---
+plugins:
+  # See the documentation for Jekyll SEO Tag: https://github.com/jekyll/jekyll-seo-tag
+  - jekyll-seo-tag
