Add defaults in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 remote_theme: "coderua/infotorg-api-jekyll-theme@main"
+# --- Jekyll configuration ---
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+      show_navigation: true
